--- a/client/H-ui.admin.page/product-category.html
+++ b/client/H-ui.admin.page/product-category.html
@@ -80,9 +80,9 @@
 			<dt class="selected"><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd style="display: block;">
 				<ul>
-					<li><a href="product-brand.html" title="品牌管理">品牌管理</a></li>
+					<li><a href="product-brand.html" title="品牌管理">商品管理</a></li>
 					<li class="current"><a href="product-category.html" title="分类管理">分类管理</a></li>
-					<li><a href="product-list.html" title="产品管理">产品管理</a></li>
+					<li><a href="product-list.html" title="产品管理">发布商品</a></li>
 				</ul>
 			</dd>
 		</dl>
