--- a/client/H-ui.admin.page/product-list.html
+++ b/client/H-ui.admin.page/product-list.html
@@ -81,9 +81,9 @@
 			<dt class="selected"><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd style="display: block;">
 				<ul>
-					<li><a href="product-brand.html" title="品牌管理">品牌管理</a></li>
+					<li><a href="product-brand.html" title="品牌管理">商品管理</a></li>
 					<li><a href="product-category.html" title="分类管理">分类管理</a></li>
-					<li class="current"><a href="product-list.html" title="产品管理">产品管理</a></li>
+					<li class="current"><a href="product-list.html" title="产品管理">发布商品</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -109,7 +109,13 @@
 					<input type="text" name="" id="" placeholder=" 产品名称" style="width:250px" class="input-text">
 					<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜产品</button>
 				</div>
-				<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" onclick="product_add('添加产品','product-add.html')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加产品</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+				<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
+					<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius">
+						<i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
+					<a class="btn btn-primary radius" onclick="product_add('添加产品','product-add.html')" href="javascript:;">
+						<i class="Hui-iconfont">&#xe600;</i> 添加产品</a></span>
+					<span class="r">共有数据：<strong>54</strong> 条</span>
+				</div>
 				<div class="mt-20">
 					<table class="table table-border table-bordered table-bg table-hover table-sort">
 						<thead>
